--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "oparl-skd-node",
-  "version": "1.0.0",
+  "name": "oparl-sdk",
+  "version": "0.0.1-alpha.1",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "ts-node src/dev.ts",
+    "prepare": "tsc"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "axios-cache-adapter": "^2.5.0",
-    "axios-rate-limit": "^1.2.1"
+    "axios-rate-limit": "^1.2.1",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
+    "ts-node": "^8.6.2",
     "typescript": "^3.8.3"
   }
 }
