--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "outDir": "dist",
     "rootDir": "src",
     "lib": ["esnext", "dom"],
+    "target": "es5",
     "strict": true,
     "esModuleInterop": true,
     "sourceMap": true,
