--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prepare": "tsc"
   },
   "dependencies": {
+    "@types/redis": "^2.8.24",
     "axios": "^0.19.2",
     "axios-cache-adapter": "^2.5.0",
     "axios-rate-limit": "^1.2.1",
